[tool.poetry]
name = "bertopic-experiments"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
bertopic = "^0.16.0"
jupyter = "^1.0.0"
matplotlib = "^3.8.4"
pillow = "^10.3.0"
altair = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

